Added information about game

--- a/source/main_page.html
+++ b/source/main_page.html
@@ -10,6 +10,11 @@
 <body>
   <div class="app">
     <h1>Pokémon Flashcards</h1>
+    
+    <p class="description">
+    Welcome to Pokémon Flashcards! Use this tool to learn and test your knowledge of Pokémon. Click through cards or add your own!
+    </p>
+    
     <div id="card-container">
       <!-- Cards will be inserted here -->
     </div>
