Added update and delete

--- a/source/main_page.html
+++ b/source/main_page.html
@@ -19,6 +19,8 @@
       <button id="prev-btn">⬅️ Previous</button>
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
+      <button id="update-btn">✏️ Update Pokémon</button> 
+      <button id="delete-btn">🗑️ Delete Pokémon</button> 
     </div>
   </div>
 
