--- a/source/main_page.html
+++ b/source/main_page.html
@@ -24,6 +24,7 @@
       <button id="prev-btn">⬅️ Previous</button>
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
+      <button id ="delete-btn">Delete Pokemon</button>
     </div>
   </div>
 
