--- a/source/collection_1.html
+++ b/source/collection_1.html
@@ -30,6 +30,6 @@
 
   <!-- Load Hammer.js before app.js if you're going to use it -->
   <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
-  <script src="scripts/app.js"></script>
+  <script type="module" src="scripts/app.js"></script>
 </body>
 </html>
