added button functionality to collecetion 1 page

--- a/source/collection_1.html
+++ b/source/collection_1.html
@@ -23,9 +23,17 @@
     <div id="buttons">
       <button id="prev-btn">⬅️ Previous</button>
       <button id="next-btn">➡️ Next</button>
-      <button id="add-btn">➕ Add Pokémon</button>
-      <button id ="delete-btn">Delete Pokemon</button>
+      <button id="add-edit-btn">➕ Add/Edit Pokémon</button>
+      <button id="deck-view-btn">🃏 View Deck</button>
+      <button id="game-view-btn">🎮 Play Game</button>
     </div>
+  </div>
+
+  <div id="popup-modal" class="modal">
+    <p>Would you like to edit or delete a Pokémon?</p>
+    <button id="edit-btn">✏️ Edit</button>
+    <button id="delete-btn">🗑️ Delete</button>
+    <button id="close-modal-btn">❌ Cancel</button>
   </div>
 
   <!-- Load Hammer.js before app.js if you're going to use it -->
