updating style of pages

--- a/source/collection_1.html
+++ b/source/collection_1.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
+  <div class="header"> <!-- added header with Pokémon logo -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+         alt="Pokemon Logo" class="logo" />
+  </div>
+
   <div class="app">
     <h1>Pokémon Flashcards</h1>
     
