--- a/source/collection_2.html
+++ b/source/collection_2.html
@@ -7,8 +7,15 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <div class="header"> <!-- Added header with Pokémon logo -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+         alt="Pokemon Logo" class="logo" />
+  </div>
   <h1>My Pokémon Collection</h1>
-  <div id="collection-container" class="collection-grid"></div>
+  <div id="collection-container" class="collection-grid">
+    <!-- Collection cards will be inserted here (this is done through collection.js) -->
+    
+  </div>
   <script src="scripts/collection.js"></script>
 </body>
 </html>
