--- a/source/game_page.html
+++ b/source/game_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pokémon Quiz</title>
-  <link rel="stylesheet" href="styles/game.css" />
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
   <div class="header">
@@ -21,7 +21,10 @@
 
     <div class="right-panel">
       <img id="pokemon-img" src="" alt="Pokemon" class="pokemon-img" />
-      <button onclick="goToCollection()" class="collection-btn">Go to Collection</button>
+      <div class="button-group">
+        <button onclick="location.href='collection_2.html'" class="collection-btn">Go to Collection</button>
+        <button onclick="location.href='collection_1.html'" class="collection-btn">See Possible Cards</button>
+      </div>      
       <p id="result-msg"></p>
     </div>
   </div>
