--- a/source/collection_2.html
+++ b/source/collection_2.html
@@ -13,7 +13,7 @@
   </div>
   <h1>My Pokémon Collection</h1>
   <div id="collection-container" class="collection-grid">
-    <!-- Collection cards will be inserted here (this is done through collection.js) -->
+    <!-- Collection cards will be inserted here (this is done in the collection.js file) -->
     
   </div>
   <script src="scripts/collection.js"></script>
