finished tasks for game and others

--- a/source/game_page.html
+++ b/source/game_page.html
@@ -22,8 +22,8 @@
     <div class="right-panel">
       <img id="pokemon-img" src="" alt="Pokemon" class="pokemon-img" />
       <div class="button-group">
-        <button onclick="location.href='collection_2.html'" class="collection-btn">Go to Collection</button>
-        <button onclick="location.href='collection_1.html'" class="collection-btn">See Possible Cards</button>
+        <button onclick="location.href='collection.html'" class="collection-btn">Go to Collection</button>
+        <button onclick="location.href='main_page.html'" class="collection-btn">Go To Main Page</button>
       </div>      
       <p id="result-msg"></p>
     </div>
