--- a/source/collection.html
+++ b/source/collection.html
@@ -16,6 +16,13 @@
     <!-- Collection cards will be inserted here (this is done in the collection.js file) -->
     
   </div>
+  
+  <!-- buttons done -->
+  <div id="collection-buttons">
+    <button onclick="location.href='edit_page.html'">Edit Mode</button>
+    <button onclick="location.href='main_page.html'">Back to Main Page</button>
+  </div>
+  
   <script src="scripts/collection.js"></script>
 </body>
 </html>
