--- a/source/edit_page.html
+++ b/source/edit_page.html
@@ -6,7 +6,7 @@
   <title>Pokémon Collection</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="edit_mode">
+<body class="edit-mode">
   <div class="header"> <!-- Added header with Pokémon logo -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
          alt="Pokemon Logo" class="logo" />
