added in Nicknames

--- a/source/collection_1.html
+++ b/source/collection_1.html
@@ -25,6 +25,7 @@
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
       <button id ="delete-btn">Delete Pokemon</button>
+      <button id  = "nickname-btn">Edit Nickname</button>
     </div>
   </div>
 
