--- a/source/main_page.html
+++ b/source/main_page.html
@@ -30,6 +30,7 @@
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
       <button id ="delete-btn">Delete Pokemon</button>
+      <button id  = "nickname-btn">Edit Nickname</button>
     </div>
   </div>
 
