--- a/source/collection_1.html
+++ b/source/collection_1.html
@@ -24,8 +24,8 @@
       <button id="prev-btn">⬅️ Previous</button>
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
-      <button id ="delete-btn">Delete Pokemon</button>
-      <button id  = "nickname-btn">Edit Nickname</button>
+      <button id ="delete-btn">❌ Delete Pokemon</button>
+      <button id  = "nickname-btn">✏️ Edit Nickname</button>
     </div>
   </div>
 
