--- a/source/collection.html
+++ b/source/collection.html
@@ -23,6 +23,9 @@
     <button onclick="location.href='main_page.html'">Back to Main Page</button>
   </div>
   
-  <script src="scripts/collection.js"></script>
+  <script type="module">
+    import { renderCollection } from './scripts/collection.js';
+    document.addEventListener('DOMContentLoaded', renderCollection);
+  </script>
 </body>
 </html>
