Added pop up window for adding nickname

--- a/source/main_page.html
+++ b/source/main_page.html
@@ -42,4 +42,21 @@
   <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
   <script type="module" src="scripts/app.js"></script>
 </body>
+
+
+<!-- 
+  /**
+   * Nickname Modal
+   * A modal popup used to edit a Pokémon's nickname.
+   * Contains an input field for entering the nickname and buttons to save or close the modal.
+-->
+<div id="nickname-modal" class="modal">
+  <div class="modal-content">
+    <span id="close-modal" class="close">&times;</span>
+    <h2>Edit Nickname</h2>
+    <input type="text" id="nickname-input" placeholder="Enter nickname" />
+    <button id="save-nickname">Save</button>
+  </div>
+</div>
+
 </html>
