added the home-page with links to all pages, added additional links in the other pages with the use of buttons, and added some styling

--- a/source/collection.html
+++ b/source/collection.html
@@ -21,6 +21,7 @@
   <div id="collection-buttons">
     <button onclick="location.href='edit_page.html'">Edit Mode</button>
     <button onclick="location.href='main_page.html'">Back to Main Page</button>
+    <button onclick="location.href='home_page.html'">Back to Home Page</button>
   </div>
   
   <script type="module">
