--- a/source/game_page.html
+++ b/source/game_page.html
@@ -24,6 +24,7 @@
       <div class="button-group">
         <button onclick="location.href='collection.html'" class="collection-btn">Go to Collection</button>
         <button onclick="location.href='main_page.html'" class="collection-btn">Go To Main Page</button>
+        <button onclick="location.href='main_page.html'" class="collection-btn">Go To Home Page</button>
       </div>      
       <p id="result-msg"></p>
     </div>
