--- a/source/main_page.html
+++ b/source/main_page.html
@@ -37,6 +37,7 @@
   <!-- buttons to pages -->
   <div id="navigation-buttons">
     <button onclick="location.href='game_page.html'">Go To Game Page</button>
+    <button onclick="location.href='home_page.html'">Back to Home Page</button>
 
   <!-- Load Hammer.js before app.js if you're going to use it -->
   <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
