--- a/source/main_page.html
+++ b/source/main_page.html
@@ -29,15 +29,14 @@
       <button id="prev-btn">⬅️ Previous</button>
       <button id="next-btn">➡️ Next</button>
       <button id="add-btn">➕ Add Pokémon</button>
-      <button id ="delete-btn">❌ Delete Pokemon</button>
-      <button id  = "nickname-btn">✏️ Edit Nickname</button>
     </div>
+
   </div>
 
   <!-- buttons to pages -->
   <div id="navigation-buttons">
-    <button onclick="location.href='game_page.html'">Go To Game Page</button>
     <button onclick="location.href='home_page.html'">Back to Home Page</button>
+  </div>
 
   <!-- Load Hammer.js before app.js if you're going to use it -->
   <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
