--- a/source/edit_page.html
+++ b/source/edit_page.html
@@ -3,19 +3,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pokémon Collection</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body class="edit-mode">
   <div class="header"> <!-- Added header with Pokémon logo -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
          alt="Pokemon Logo" class="logo" />
+  </div class>
+
+  <h1>Edit My Pokémon Card</h1>
+
+  <div id="card-container">
+    <!-- Individual will be inserted here (from collection)-->
+    <div class="pokemon-card"> <!-- Example Pokémon card (placeholder)-->
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="Bulbasaur">
+      <h3>Bulbasaur</h3>
+    </div>
   </div>
-  <h1>Edit My Pokémon Collection</h1>
-  <div id="collection-container" class="collection-grid">
-    <!-- Collection cards will be inserted here (this is done in the collection.js file) -->
-    
-  </div>
+
+  <div id="buttons">
+    <button id="delete-btn">❌ Delete Pokémon</button>
+    <button id="nickname-btn">✏️ Edit Nickname</button>
 
   <script src="scripts/collection.js"></script>
 </body>
