fixed home button on game page

--- a/source/game_page.html
+++ b/source/game_page.html
@@ -22,7 +22,7 @@
     <div class="right-panel">
       <img id="pokemon-img" src="" alt="Pokemon" class="pokemon-img" />
       <div class="button-group">
-        <button onclick="location.href='main_page.html'" class="collection-btn">Go To Home Page</button>
+        <button onclick="location.href='home_page.html'" class="collection-btn">Go To Home Page</button>
       </div>      
       <p id="result-msg"></p>
     </div>
