--- a/source/collection.html
+++ b/source/collection.html
@@ -18,7 +18,7 @@
   </div>
   
   <!-- buttons done -->
-  <div id="collection-buttons">
+  <div class="collection-button-group">
     <button onclick="location.href='edit_page.html'">Edit Mode</button>
     <button onclick="location.href='main_page.html'">Back to Main Page</button>
     <button onclick="location.href='home_page.html'">Back to Home Page</button>
