--- a/source/collection.html
+++ b/source/collection.html
@@ -1,34 +1,39 @@
 <!-- collection.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Pokémon Collection</title>
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  <div class="header"> <!-- Added header with Pokémon logo -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
-         alt="Pokemon Logo" class="logo" />
-  </div>
-  <h1>My Pokémon Collection</h1>
-  <div id="collection-container" class="collection-grid">
-    <!-- Collection cards will be inserted here (this is done in the collection.js file) -->
-    
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pokémon Collection</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <!-- Added header with Pokémon logo -->
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+        alt="Pokemon Logo"
+        class="logo"
+      />
+    </div>
+    <h1>My Pokémon Collection</h1>
+    <div id="collection-container" class="collection-grid">
+      <!-- Collection cards will be inserted here (this is done in the collection.js file) -->
+    </div>
 
+    <!-- buttons done -->
+    <div class="collection-button-group">
+      <button onclick="location.href='edit_page.html'">Edit Mode</button>
+      <button onclick="location.href='main_page.html'">
+        Back to Main Page
+      </button>
+      <button onclick="location.href='home_page.html'">
+        Back to Home Page
+      </button>
+    </div>
 
-  <!-- buttons done -->
-  <div class="collection-button-group">
-    <button onclick="location.href='edit_page.html'">Edit Mode</button>
-    <button onclick="location.href='main_page.html'">Back to Main Page</button>
-    <button onclick="location.href='home_page.html'">Back to Home Page</button>
-  </div>
-
-  
-  <script type="module">
-    import { renderCollection } from './scripts/collection.js';
-    document.addEventListener('DOMContentLoaded', renderCollection);
-  </script>
-</body>
+    <script type="module">
+      import { renderCollection } from "./scripts/collection.js";
+      document.addEventListener("DOMContentLoaded", renderCollection);
+    </script>
+  </body>
 </html>
