added edit page with the repective pokemon

--- a/source/edit_page.html
+++ b/source/edit_page.html
@@ -18,16 +18,13 @@
 
   <div id="card-container">
     <!-- Individual will be inserted here (from collection)-->
-    <div class="pokemon-card"> <!-- Example Pokémon card (placeholder)-->
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="Bulbasaur">
-      <h3>Bulbasaur</h3>
-    </div>
   </div>
 
   <div id="buttons">
     <button id="delete-btn">❌ Delete Pokémon</button>
     <button id="nickname-btn">✏️ Edit Nickname</button>
-
-  <script src="scripts/collection.js"></script>
+    <button id="back-btn">← Back to Collection</button>
+  </div>
+  <script type="module" src="scripts/edit_page.js"></script>
 </body>
 </html>
