--- a/source/collection.html
+++ b/source/collection.html
@@ -21,14 +21,11 @@
     </div>
 
     <!-- buttons done -->
-    <div class="collection-button-group">
-      <button onclick="location.href='edit_page.html'">Edit Mode</button>
-      <button onclick="location.href='main_page.html'">
-        Back to Main Page
-      </button>
-      <button onclick="location.href='home_page.html'">
-        Back to Home Page
-      </button>
+    <div id="button-container">
+      <div>
+        <button onclick="location.href='home_page.html'">Back to Home Page</button>
+      </div>
+      <button id="add-pokemon-btn">➕ Add Pokémon</button> <!-- separated due to conflict with clicking button functionality-->
     </div>
 
     <script type="module">
