fixed Codacy, collection page-button layout

--- a/source/collection.html
+++ b/source/collection.html
@@ -18,11 +18,11 @@
   </div>
   
   <!-- buttons done -->
-  <div id="collection-buttons">
-    <button onclick="location.href='edit_page.html'">Edit Mode</button>
-    <button onclick="location.href='main_page.html'">Back to Main Page</button>
-    <button id = "add_to_collection_btn">➕ Add Pokemon</button>
-    <button onclick="location.href='home_page.html'">Back to Home Page</button>
+  <div id="button-container">
+    <div>
+      <button onclick="location.href='home_page.html'">Back to Home Page</button>
+    </div>
+    <button id="add-pokemon-btn">➕ Add Pokémon</button>
   </div>
   
   <script type="module">
