--- a/source/home_page.html
+++ b/source/home_page.html
@@ -22,9 +22,9 @@
       appearances, and fun trivia. Choose a mode to begin:
     </p>
 
-    <div class="collection-grid" style="max-width: 1000px; margin: auto">
+    <div class="home-page-grid">
       <!-- Flashcards Section -->
-      <div class="pokemon-card">
+      <div class="home-page">
         <img
           src="https://archives.bulbagarden.net/media/upload/1/17/Cardback.jpg"
           alt="Flashcards Preview"
@@ -40,9 +40,9 @@
       </div>
 
       <!-- Game Section -->
-      <div class="pokemon-card">
+      <div class="home-page">
         <img
-          src="https://archives.bulbagarden.net/media/upload/2/22/Elemental_Types_Sleeves.jpg"
+          src="https://i.ebayimg.com/images/g/ZCgAAOSw4DNllECu/s-l1600.webp"
           alt="Quiz Preview"
         />
         <h3>Quiz Game</h3>
@@ -54,7 +54,7 @@
       </div>
 
       <!-- Collection Section -->
-      <div class="pokemon-card">
+      <div class="home-page">
         <img
           src="https://archives.bulbagarden.net/media/upload/9/95/Project_Pok%C3%A9dex_logo.png"
           alt="Collection Preview"
