stored images locally

--- a/source/home_page.html
+++ b/source/home_page.html
@@ -26,7 +26,7 @@
       <!-- Flashcards Section -->
       <div class="home-page">
         <img
-          src="https://archives.bulbagarden.net/media/upload/1/17/Cardback.jpg"
+          src="images/cardback.jpg"
           alt="Flashcards Preview"
         />
         <h3>Flashcards</h3>
@@ -42,7 +42,7 @@
       <!-- Game Section -->
       <div class="home-page">
         <img
-          src="https://i.ebayimg.com/images/g/ZCgAAOSw4DNllECu/s-l1600.webp"
+          src="images/types.webp"
           alt="Quiz Preview"
         />
         <h3>Quiz Game</h3>
@@ -56,7 +56,7 @@
       <!-- Collection Section -->
       <div class="home-page">
         <img
-          src="https://archives.bulbagarden.net/media/upload/9/95/Project_Pok%C3%A9dex_logo.png"
+          src="images/pokedex.png"
           alt="Collection Preview"
         />
         <h3>Collection</h3>
