finished form and added buttons to home page

--- a/source/home_page.html
+++ b/source/home_page.html
@@ -69,7 +69,16 @@
           Go to Collection
         </button>
       </div>
+
+      <!-- Feedback Section -->
+      <div class="feedback-link-container">
+        <button onclick="location.href='form.html'" class="feedback-link-btn">
+          Submit Your Feedback
+        </button>
+      </div>
+      
     </div>
+
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
