added sound button feature

--- a/source/game_page.html
+++ b/source/game_page.html
@@ -31,10 +31,18 @@
           >
             Go To Home Page
           </button>
+          <button id="mute-btn" class="collection-btn">🔊 Mute</button>
         </div>
         <p id="result-msg"></p>
       </div>
     </div>
+
+    <!-- ✅ Background Music: Public URL -->
+    <audio
+      id="bg-audio"
+      src="https://archive.org/download/tvtunes_11549/Pokemon.mp3"
+      loop
+    ></audio>
 
     <script type="module" src="scripts/game.js"></script>
   </body>
