--- a/source/main_page.html
+++ b/source/main_page.html
@@ -22,7 +22,7 @@
 
       <p class="description">
         Welcome to Pokémon Flashcards! Use this tool to learn and test your
-        knowledge of Pokémon. Click through cards or add your own!
+        knowledge of Pokémon. Click through and see the cards you can add to your collection!
       </p>
 
       <div id="card-container">
