fixed unknown type and moved filter label

--- a/source/collection.html
+++ b/source/collection.html
@@ -16,8 +16,8 @@
       />
     </div>
     <h1>My Pokémon Collection</h1>
-    <label for="type-filter">Filter by Type:</label>
-    <select id="type-filter">
+    <label for="type-filter" style="margin-left: 20px;">Filter by Type:</label>
+    <select id="type-filter" style="margin-left: 5px;">
       <option value="all">All Types</option>
       <!-- More options will be populated dynamically -->
     </select>
