Added a loading screen/Fixed Main Page not showing cards issue

--- a/source/main_page.html
+++ b/source/main_page.html
@@ -25,6 +25,8 @@
         knowledge of Pokémon. Click through cards or add your own!
       </p>
 
+      <div id="loading" class="loading">Loading...</div>
+
       <div id="card-container">
         <!-- Cards will be inserted here -->
       </div>
