ensure loading happens quickly (load some, then rest in background)

--- a/source/main_page.html
+++ b/source/main_page.html
@@ -32,7 +32,7 @@
       </div>
 
       <!-- Buttons -->
-      <div id="buttons">
+      <div id="buttons" style="display: none;">
         <button id="prev-btn">⬅️ Previous</button>
         <button id="next-btn">➡️ Next</button>
       </div>
