--- a/source/home_page.html
+++ b/source/home_page.html
@@ -6,6 +6,7 @@
     <title>Pokémon Learning Hub</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="manifest" href="../manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="index-page">
     <div class="header">
