--- a/source/edit_page.html
+++ b/source/edit_page.html
@@ -7,6 +7,7 @@
   <title>Pokémon Collection</title>
   <link rel="stylesheet" href="styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 
 <body class="edit-mode">
