--- a/source/game_page.html
+++ b/source/game_page.html
@@ -5,6 +5,7 @@
     <title>Pokémon Quiz</title>
     <link rel="stylesheet" href="styles/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body>
     <div class="header">
