--- a/source/home_page.html
+++ b/source/home_page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="manifest" href="../manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body id="index-page">
     <div class="header">
