--- a/source/main_page.html
+++ b/source/main_page.html
@@ -7,6 +7,7 @@
     <title>Pokémon Flashcards</title>
     <link rel="stylesheet" href="styles/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.png" type="image/png" />
   </head>
   <body class="flashcards-page">
     <div class="header">
