convert pokemon logo to webp

--- a/source/home_page.html
+++ b/source/home_page.html
@@ -12,7 +12,7 @@
   <body id="index-page">
     <div class="header">
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+        src="../assets/images/pokemon_logo.webp"
         alt="Pokemon Logo"
         class="logo"
       />
