--- a/source/edit_page.html
+++ b/source/edit_page.html
@@ -12,8 +12,11 @@
 
 <body class="edit-mode">
   <div class="header"> <!-- Added header with Pokémon logo -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
-         alt="Pokemon Logo" class="logo" />
+    <img
+        src="../assets/images/pokemon_logo.webp"
+        alt="Pokemon Logo"
+        class="logo"
+      />
   </div class>
 
   <h1>Edit My Pokémon Card</h1>
