--- a/source/form.html
+++ b/source/form.html
@@ -12,10 +12,10 @@
 <body>
 
     <div class="header"> 
-        <img 
-            src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg" 
-            alt="Pokemon Logo" 
-            class="logo" 
+        <img
+            src="../assets/images/pokemon_logo.webp"
+            alt="Pokemon Logo"
+            class="logo"
         />
     </div>
 
