--- a/source/game_page.html
+++ b/source/game_page.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+        src="../assets/images/pokemon_logo.webp"
         alt="Pokemon Logo"
         class="logo"
       />
