--- a/source/main_page.html
+++ b/source/main_page.html
@@ -13,7 +13,7 @@
     <div class="header">
       <!-- added header with Pokémon logo -->
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+        src="../assets/images/pokemon_logo.webp"
         alt="Pokemon Logo"
         class="logo"
       />
