added home button

--- a/source/form.html
+++ b/source/form.html
@@ -48,6 +48,7 @@
         </select>
 
         <button type="submit">Submit Feedback</button>
+        <button onclick="location.href='home_page.html'">Go to Home</button>
     </form>
     </div>
 
